# mcts

./: .gitignore  .pre-commit-config.yaml  .style.yapf  README.md  play.py  pylintrc  pyproject.toml  requirements.txt  setup.py  test.py  train.py
agent/: __init__.py  _agent.py  _mcts.py  _model.py  _train.py
game/: __init__.py  _game.py
src/mcts/agent/: __init__.py  _agent.py  _mcts.py  _model.py  _train.py
src/mcts/game/: __init__.py  _game.py
src/mcts/gym/: __init__.py  _consumer.py  _producer.py  _storage.py  _storage_test.py
src/mcts/tictactoe/: __init__.py  __main__.py  _game.py  _game_test.py  _players.py  _players_test.py
src/mcts/tictactoe/tensor/: __init__.py  _game.py  _game_test.py  _players.py
tictactoe/: __init__.py  __main__.py  _game.py  _game_test.py  _players.py  _players_test.py  tensor.py
tictactoe/tensor/: __init__.py  _game.py  _game_test.py  _players.py
